--- a/application.css
+++ b/application.css
@@ -1,5 +1,6 @@
-body {
+ body {
   margin: 2%;
+  color: #333;
 }
 
 a {
@@ -34,7 +35,7 @@ a {
 }
 
 .hidden {
-  font-size: .3em;
+
   display: none;
 }
 
